Updating package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "brogue-core-grammars",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "Core grammar files for use with brogue.",
     "repository": {
         "type": "git",
@@ -8,6 +8,7 @@
     },
     "author": "Ben Smith",
     "license": "MIT",
+    "keywords": ["brogue", "generator", "grammars", "procgen"],
     "bugs": {
         "url": "https://github.com/chippolot/brogue-core-grammars/issues"
     },
